2006-07-09  Brian Bidulock  <bidulock@openss7.org>

	* README: updated quick installation instructions

2006-07-08  Brian Bidulock  <bidulock@openss7.org>

	* .pkgrelease: bumped version to release candidate 2
	* NEWS: bumped version to release candidate 2
	* debian/changelog: bumped version to release candidate 2
	* debian/rules.in: clean deb package master build
	* src/test/test-inet_raw.c: removed trigraphs
	* src/test/test-inet_sctp.c: removed trigraphs
	* src/test/test-inet_tcp.c: removed trigraphs
	* src/test/test-inet_udp.c: removed trigraphs
	* acinclude.m4: handle old SLES 9 2.6.5 kernel
	* src/drivers/rawip.c: handle old SLES 9 2.6.5 kernel
	* src/drivers/tcp.c: handle old SLES 9 2.6.5 kernel
	* src/drivers/udp.c: handle old SLES 9 2.6.5 kernel

2006-07-07  Brian Bidulock  <bidulock@openss7.org>

	* debian/copyright: typo
	* BUGS: added bug file to capture development bugs

2006-07-06  Brian Bidulock  <bidulock@openss7.org>

	* debian/control.in: first full debian master package build of debs on Ubuntu
	* debian/rules.in:: first full debian master package build of debs on Ubuntu
	* debian/changelog: packaged release candidate for Mark Fugate

2006-07-05  Brian Bidulock  <bidulock@openss7.org>

	* NEWS: package release candidate for Mark Fugate
	* .pkgrelease: package release candidate for Mark Fugate

2006-07-04  Brian Bidulock  <bidulock@openss7.org>

	* strinet.spec.in: place all include files in development sub-package
	* src/drivers/inet.c: correct compile back to RH 7.2
	* src/drivers/udp.c: correct compile back to RH 7.2
	* src/drivers/rawip.c: correct compile back to RH 7.2
	* src/drivers/tcp.c: correct compile back to RH 7.2
	* src/drivers/udp_hooks.h.in: correct compile back to RH 7.2
	* acinclude.m4: correct compile back to RH 7.2

2006-07-03  Brian Bidulock  <bidulock@openss7.org>

	* README: updated for release
	* README-cvs: updated for release
	* README-nexusware: updated for release
	* doc/manual/releases.texi: updated for release
